# CmakeStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sundy/cmakedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sundy/cmakedemo/: MainActivity.java
app/src/test/java/com/sundy/cmakedemo/: ExampleUnitTest.java
